--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   font-size: 14px;
-  line-height: 16px;
+  line-height: 21px;
   color: rgb(51, 51, 51);
   font-weight: normal;
   font-style: normal;
@@ -8,22 +8,73 @@ body {
   font-family: "PT Sans" "DIN Pro" sans-serif;
 }
 
-.menu-font {
+p {
   font-size: 14px;
-  line-height: 16px;
-  color: rgb(0, 0, 0);
-  font-weight: bold;
+  line-height: 21px;
+  color: rgb(51, 51, 51);
+  font-weight: normal;
   font-style: normal;
-  text-transform: capitalize;
+  text-transform: uppercase;
   font-family: "PT Sans" "DIN Pro" sans-serif;
 }
 
-h1 {
-  font-size: 14px;
-  line-height: 16px;
+h2 {
+  font-size: 16px;
+  line-height: 21px;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  font-style: normal;
+  text-transform: uppercase;
+  font-family: "PT Sans" "DIN Pro" sans-serif;
+}
+
+h3 {
+  font-size: 21px;
+  line-height: 26px;
   color: rgb(0, 0, 0);
   font-weight: bold;
   font-style: normal;
-  text-transform: capitalize;
+  text-transform: uppercase;
+  font-family: "PT Sans" "DIN Pro" sans-serif;
+}
+
+.main-navigation {
+  font-size: 14px;
+  line-height: 26px;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  font-style: normal;
+  text-transform: uppercase;
+  font-family: "PT Sans" "DIN Pro" sans-serif;
+}
+
+.sorting {
+  font-size: 12px;
+  line-height: 18px;
+  color: rgb(0, 0, 0);
+  font-weight: normal;
+  font-style: normal;
+  text-transform: uppercase;
+  opacity: 0.3;
+  font-family: "PT Sans" "DIN Pro" sans-serif;
+}
+
+.rate {
+  font-size: 14px;
+  line-height: 21px;
+  color: rgb(102, 102, 102);
+  font-weight: normal;
+  font-style: normal;
+  text-transform: uppercase;
+  font-family: "PT Sans" "DIN Pro" sans-serif;
+}
+
+.html-academy {
+  font-size: 14px;
+  line-height: 26px;
+  color: rgb(0, 0, 0);
+  font-weight: normal;
+  font-style: normal;
+  text-transform: uppercase;
   font-family: "PT Sans" "DIN Pro" sans-serif;
 }
