--- a/css/style.css
+++ b/css/style.css
@@ -8,16 +8,6 @@ body {
   font-family: "PT Sans" "DIN Pro" sans-serif;
 }
 
-p {
-  font-size: 14px;
-  line-height: 21px;
-  color: rgb(51, 51, 51);
-  font-weight: normal;
-  font-style: normal;
-  text-transform: uppercase;
-  font-family: "PT Sans" "DIN Pro" sans-serif;
-}
-
 h2 {
   font-size: 16px;
   line-height: 21px;
@@ -38,11 +28,81 @@ h3 {
   font-family: "PT Sans" "DIN Pro" sans-serif;
 }
 
+h4 {
+  font-size: 21px;
+  line-height: 21px;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  font-style: normal;
+  text-transform: uppercase;
+  font-family: "PT Sans" "DIN Pro" sans-serif;
+}
+
+h5 {
+  font-size: 21px;
+  line-height: 21px;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  font-style: normal;
+  text-transform: uppercase;
+  font-family: "PT Sans" "DIN Pro" sans-serif;
+}
+
+h6 {
+  font-size: 21px;
+  line-height: 26px;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  font-style: normal;
+  text-transform: uppercase;
+  font-family: "PT Sans" "DIN Pro" sans-serif;
+}
+
 .main-navigation {
   font-size: 14px;
   line-height: 26px;
   color: rgb(0, 0, 0);
   font-weight: bold;
+  font-style: normal;
+  text-transform: uppercase;
+  font-family: "PT Sans" "DIN Pro" sans-serif;
+}
+
+.promo-speech {
+  font-size: 14px;
+  line-height: 21px;
+  color: rgb(51, 51, 51);
+  font-weight: normal;
+  font-style: normal;
+  text-transform: uppercase;
+  font-family: "PT Sans" "DIN Pro" sans-serif;
+}
+
+.picure-description {
+  font-size: 14px;
+  line-height: 21px;
+  color: rgb(255, 255, 255);
+  font-weight: normal;
+  font-style: normal;
+  text-transform: uppercase;
+  font-family: "PT Sans" "DIN Pro" sans-serif;
+}
+
+.main-question {
+  font-size: 30px;
+  line-height: 24px;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  font-style: normal;
+  text-transform: uppercase;
+  font-family: "PT Sans" "DIN Pro" sans-serif;
+}
+
+.to-do {
+  font-size: 14px;
+  line-height: 24px;
+  color: rgb(51, 51, 51);
+  font-weight: normal;
   font-style: normal;
   text-transform: uppercase;
   font-family: "PT Sans" "DIN Pro" sans-serif;
