--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@ body {
   line-height: 21px;
   color: rgb(51, 51, 51);
   font-weight: normal;
-  font-style: normal;
   text-transform: uppercase;
   font-family: "PT Sans" "DIN Pro" sans-serif;
 }
@@ -13,7 +12,6 @@ h2 {
   line-height: 21px;
   color: rgb(255, 255, 255);
   font-weight: bold;
-  font-style: normal;
   text-transform: uppercase;
   font-family: "PT Sans" "DIN Pro" sans-serif;
 }
@@ -23,7 +21,6 @@ h3 {
   line-height: 26px;
   color: rgb(0, 0, 0);
   font-weight: bold;
-  font-style: normal;
   text-transform: uppercase;
   font-family: "PT Sans" "DIN Pro" sans-serif;
 }
@@ -33,7 +30,6 @@ h4 {
   line-height: 21px;
   color: rgb(255, 255, 255);
   font-weight: bold;
-  font-style: normal;
   text-transform: uppercase;
   font-family: "PT Sans" "DIN Pro" sans-serif;
 }
@@ -43,7 +39,6 @@ h5 {
   line-height: 21px;
   color: rgb(0, 0, 0);
   font-weight: bold;
-  font-style: normal;
   text-transform: uppercase;
   font-family: "PT Sans" "DIN Pro" sans-serif;
 }
@@ -53,7 +48,6 @@ h6 {
   line-height: 26px;
   color: rgb(255, 255, 255);
   font-weight: bold;
-  font-style: normal;
   text-transform: uppercase;
   font-family: "PT Sans" "DIN Pro" sans-serif;
 }
@@ -63,17 +57,14 @@ h6 {
   line-height: 26px;
   color: rgb(0, 0, 0);
   font-weight: bold;
-  font-style: normal;
   text-transform: uppercase;
   font-family: "PT Sans" "DIN Pro" sans-serif;
 }
 
 .promo-speech {
   font-size: 14px;
-  line-height: 21px;
+  line-height: 26px;
   color: rgb(51, 51, 51);
-  font-weight: normal;
-  font-style: normal;
   text-transform: uppercase;
   font-family: "PT Sans" "DIN Pro" sans-serif;
 }
@@ -82,8 +73,6 @@ h6 {
   font-size: 14px;
   line-height: 21px;
   color: rgb(255, 255, 255);
-  font-weight: normal;
-  font-style: normal;
   text-transform: uppercase;
   font-family: "PT Sans" "DIN Pro" sans-serif;
 }
@@ -93,7 +82,6 @@ h6 {
   line-height: 24px;
   color: rgb(0, 0, 0);
   font-weight: bold;
-  font-style: normal;
   text-transform: uppercase;
   font-family: "PT Sans" "DIN Pro" sans-serif;
 }
@@ -102,8 +90,14 @@ h6 {
   font-size: 14px;
   line-height: 24px;
   color: rgb(51, 51, 51);
-  font-weight: normal;
-  font-style: normal;
+  text-transform: uppercase;
+  font-family: "PT Sans" "DIN Pro" sans-serif;
+}
+
+.sorting-header {
+  font-size: 12px;
+  line-height: 18px;
+  color: rgb(0, 0, 0);
   text-transform: uppercase;
   font-family: "PT Sans" "DIN Pro" sans-serif;
 }
@@ -112,8 +106,6 @@ h6 {
   font-size: 12px;
   line-height: 18px;
   color: rgb(0, 0, 0);
-  font-weight: normal;
-  font-style: normal;
   text-transform: uppercase;
   opacity: 0.3;
   font-family: "PT Sans" "DIN Pro" sans-serif;
@@ -123,8 +115,24 @@ h6 {
   font-size: 14px;
   line-height: 21px;
   color: rgb(102, 102, 102);
-  font-weight: normal;
-  font-style: normal;
+  text-transform: uppercase;
+  font-family: "PT Sans" "DIN Pro" sans-serif;
+}
+
+.btn {
+  font-size: 14px;
+  line-height: 21px;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  text-transform: uppercase;
+  font-family: "PT Sans" "DIN Pro" sans-serif;
+}
+
+.search-form {
+  font-size: 14px;
+  line-height: 26px;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
   text-transform: uppercase;
   font-family: "PT Sans" "DIN Pro" sans-serif;
 }
@@ -133,8 +141,6 @@ h6 {
   font-size: 14px;
   line-height: 26px;
   color: rgb(0, 0, 0);
-  font-weight: normal;
-  font-style: normal;
   text-transform: uppercase;
   font-family: "PT Sans" "DIN Pro" sans-serif;
 }
