--- a/css/style.css
+++ b/css/style.css
@@ -53,10 +53,10 @@ body {
 }
 
 .promo {
-  width: 510px;
+  width: 530px;
   float: left;
   margin-left: 355px;
-  margin-bottom: 59px;
+  margin-bottom: 70px;
 }
 
 .promo h3{
@@ -68,9 +68,9 @@ body {
   text-align: center;
 }
 
-.reason-picure {
+.reason-picture {
    height: 254px;
-   margin-bottom: 62px;
+   margin-bottom: 75px;
 }
 
 .picture-description {
@@ -81,24 +81,26 @@ body {
   background-color: rgb(129, 179, 210);
 }
 
-.picure {
+.picture {
   float: right;
 }
 
 .reason-list {
-  margin-left: 60px;
-  margin-right: 60px;
   text-align: center;
-  height: 331px;
+  float: left;
+  width: 1200px;
+  height: 253px;
+  margin-bottom: 79px;
 }
 
 .reason-point {
   float: left;
-  width: 290px;
-  margin-right: 70px;
+  width: 270px;
+  margin-left: 60px;
+  margin-right: 60px;
 }
 
-.reason-picutre1 {
+.reason-picture1 {
    height: 254px;
    margin-bottom: 62px;
 }
@@ -113,6 +115,71 @@ body {
 
 .picture1 {
   float: left;
+}
+
+.reason-list1 {
+  text-align: center;
+  float: left;
+  width: 1200px;
+  height: 253px;
+  background-color: rgb(238, 238, 238);
+  margin-bottom: 63px;
+}
+
+.reason-point1 {
+  float: left;
+  width: 270px;
+  margin-right: 65px;
+  margin-left: 65px;
+}
+
+.if-interest {
+   float: left;
+   text-align: center;
+   margin-left: 382px;
+   width: 442px;
+   height: 295px;
+}
+
+.search-block {
+  float: left;
+  text-align: center;
+  height: 480px;
+  width: 576px;
+  margin-left: 371px;
+}
+
+.search-form {
+  height: 215px;
+  background-color: rgb(129, 179, 210);
+}
+
+.search-result {
+  height: 95px;
+}
+
+.footer-main {
+  height: 120px;
+  width: 1200px;
+  margin-left: 60px;
+  margin-right: 60px;
+}
+
+.hashtag {
+  float: left;
+  width: 149px;
+}
+
+.footer-social {
+  float: left;
+  width: 149px;
+  text-align: center;
+  background-color: rgb(129, 179, 210);
+}
+
+.footer-copyright {
+  float: right;
+  text-align: center;
 }
 
 h2 {
