--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
 }
 
 .main-header{
-  min-height: 45px;
+  min-height: 56px;
 }
 
 .main-navigation {
@@ -37,29 +37,53 @@ body {
     font-family: "PT Sans" "DIN Pro" sans-serif;
 }
 
+.main-navigation ul {
+  margin-top: -20px;
+}
+
 .navigation-element {
-    width: 115px;
+    width: 240px;
     list-style: none;
+    min-height: 56px;
+}
+
+.navigation-element a {
+  display: inline-block;
+  padding-top: 10px;
 }
 
 .left-navigation {
     float: left;
-    margin-right: 130px;
+    text-align: left;
 }
 
 .right-navigation {
     float: right;
-    margin-left: 130px;
+    text-align: right;
 }
 
 .index-logo {
   position: absolute;
+  top: 0px;
   left: 750px;
-  float: left;
 }
 
+.promo-picture {
+  background-image: url(../img/mainphoto.jpg);
+  width: 1200px;
+  height: 564px;
+}
+
+.promo-block {
+  background-color: rgb(255,255,255);
+  width: 1200px;
+  min-height: 250px;
+  margin-top: 50px;
+}
+
+
 .promo {
-  width: 530px;
+  width: 525px;
   margin-bottom: 70px;
   margin-left: auto;
   margin-right: auto;
@@ -67,7 +91,7 @@ body {
 }
 
 .reason-picture {
-   height: 254px;
+   min-height: 254px;
    margin-bottom: 75px;
 }
 
@@ -88,14 +112,14 @@ body {
   float: left;
   width: 1200px;
   min-height: 253px;
-  margin-bottom: 79px;
+  margin-bottom: 50px;
 }
 
 .reason-point {
   float: left;
-  width: 270px;
-  margin-left: 60px;
-  margin-right: 60px;
+  width: 300px;
+  height: 220px;
+  margin-left: 75px;
 }
 
 .reason-picture-reverse {
@@ -115,7 +139,7 @@ body {
   float: left;
 }
 
-.reason-list1 {
+.reason-list-nopicture {
   text-align: center;
   float: left;
   width: 1200px;
@@ -124,31 +148,40 @@ body {
   margin-bottom: 63px;
 }
 
-.reason-point1 {
+.reason-point-nopicture {
   float: left;
   width: 270px;
   margin-right: 65px;
   margin-left: 65px;
 }
 
-.if-interest {
+.if-interest-block {
+  height: 290px;
+  width: 1200px;
+  background-color: rgb(255, 255, 255);
+}
+
+.if-interest-content {
+   height: 102px;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    width: 442px;
 }
 
+.map {
+  background-image: url(../img/map.jpg);
+  width: 1200px;
+  height: 593px;
+}
+
 .search-block {
-  float: left;
   text-align: center;
-  height: 480px;
-  width: 576px;
-  margin-left: 371px;
+  width: 1200px;
 }
 
 .search-form {
   height: 215px;
-  background-color: rgb(129, 179, 210);
 }
 
 .search-result {
