--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ body {
 }
 
 .reason-picture {
-   min-height: 254px;
+   min-height: 256px;
    margin-bottom: 75px;
 }
 
@@ -105,11 +105,11 @@ body {
 
 .picture {
   float: right;
+  height: 256px;
 }
 
 .reason-list {
   text-align: center;
-  float: left;
   width: 1200px;
   min-height: 253px;
   margin-bottom: 50px;
@@ -123,7 +123,7 @@ body {
 }
 
 .reason-picture-reverse {
-   height: 254px;
+   height: 256px;
    margin-bottom: 0px;
 }
 
@@ -137,11 +137,11 @@ body {
 
 .picture-reverse {
   float: left;
+  height: 256px;
 }
 
 .reason-list-nopicture {
   text-align: center;
-  float: left;
   width: 1200px;
   height: 253px;
   background-color: rgb(238, 238, 238);
@@ -150,9 +150,9 @@ body {
 
 .reason-point-nopicture {
   float: left;
-  width: 270px;
-  margin-right: 65px;
-  margin-left: 65px;
+  width: 300px;
+  min-height: 180px;
+  margin-left: 70px;
 }
 
 .if-interest-block {
@@ -181,7 +181,20 @@ body {
 }
 
 .search-form {
-  height: 215px;
+  text-align: left;
+  margin: 0 auto;
+  height: 483px;
+  width: 576px;
+  background-color: rgb(255, 255, 255);
+}
+
+.search-name {
+  background-color: rgb(118, 99, 87);
+  display: block;
+  width: 576px;
+  height: 87px;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .search-result {
@@ -190,34 +203,44 @@ body {
 
 .footer-main {
   height: 120px;
-  width: 1200px;
   margin-left: 60px;
   margin-right: 60px;
 }
 
 .hashtag {
-  float: left;
   width: 149px;
+  height: 40px;
+  padding-top: 25px;
+  float: left;
+}
+
+.footer-social {
+  width: 181px;
+  height: 63px;
+  float: left;
+  padding-top: 40px;
+  margin-left: 350px;
 }
 
 .social-btn {
-  float: left;
   margin-left: auto;
   margin-right: auto;
   height: 50px;
   width: 50px;
-  padding-right: 5px;
   background-color: rgb(129, 179, 210);
 }
 
-.footer-social img {
-  margin:0 auto;
-  float: left;
+.footer-copyright {
+  text-align: center;
+  float: right;
+  height: 40px;
+  padding-top: 45px;
 }
 
-.footer-copyright {
-  float: right;
-  text-align: center;
+.html-academy {
+  display: inline-block;
+  vertical-align: top;
+  padding-bottom: 7px;
 }
 
 h2 {
