--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,6 @@ body {
   margin-top: 50px;
 }
 
-
 .promo {
   width: 525px;
   margin-bottom: 70px;
@@ -197,8 +196,49 @@ body {
   text-align: center;
 }
 
+.search-form-small {
+  text-align: left;
+  margin: 0 auto;
+  height: 218px;
+  background-image: url("../img/background.png");
+}
+
 .search-result {
-  height: 95px;
+  height: 90px;
+  border-bottom: 1px solid grey;
+}
+
+.sorting-result {
+  display: inline-block;
+  margin-right: 50px;
+  margin-left: 73px;
+}
+
+.sorting-header {
+  display: inline-block;
+  margin-right: 15px;
+}
+
+.sorting {
+    list-style: none;
+    display: inline-block;
+}
+
+.sorting-element {
+  display: inline-block;
+  margin-right: 30px;
+}
+
+.search-button {
+  margin-right: 73px;
+}
+
+.up-button {
+  float: right;
+}
+
+.down-button {
+  float: right;
 }
 
 .footer-main {
@@ -210,7 +250,7 @@ body {
 .hashtag {
   width: 149px;
   height: 40px;
-  padding-top: 25px;
+  padding-top: 30px;
   float: left;
 }
 
