--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  min-width: 500px;
+  min-width: 1200px;
   margin: 0;
   padding: 0;
   font-size: 14px;
@@ -14,6 +14,7 @@ body {
 .container {
     width: 1200px;
     margin: 0 auto;
+    position: relative;
 }
 
 .clearfix::after {
@@ -65,7 +66,7 @@ body {
 .index-logo {
   position: absolute;
   top: 0px;
-  left: 750px;
+  left: 560px;
 }
 
 .promo-picture {
@@ -447,7 +448,6 @@ h6 {
   line-height: 18px;
   color: rgb(0, 0, 0);
   text-transform: uppercase;
-  font-family: "PT Sans" "DIN Pro" sans-serif;
 }
 
 .sorting {
@@ -456,7 +456,6 @@ h6 {
   color: rgb(0, 0, 0);
   text-transform: uppercase;
   opacity: 0.3;
-  font-family: "PT Sans" "DIN Pro" sans-serif;
 }
 
 .rate {
