--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,19 @@
 body {
+  margin: 0;
+  padding: 0;
   min-width: 1200px;
   font-size: 14px;
   line-height: 21px;
   color: rgb(51, 51, 51);
   font-weight: normal;
   text-transform: uppercase;
-  font-family: "PT Sans" "DIN Pro" sans-serif;
+  font-family: PT Sans, DIN Pro, sans-serif;
   background-color: white;
 }
 
 .container {
     width: 1200px;
     margin: 0 auto;
-    position: relative;
 }
 
 .clearfix::after {
@@ -21,34 +22,32 @@ body {
     clear: both;
 }
 
-.main-header{
-  min-height: 56px;
-}
-
 .main-navigation {
     margin-left: 73px;
     margin-right: 73px;
-    font-size: 14px;
-    line-height: 26px;
-    color: rgb(0, 0, 0);
-    font-weight: bold;
-    text-transform: uppercase;
-    font-family: "PT Sans" "DIN Pro" sans-serif;
-}
-
-.main-navigation ul {
-  margin-top: -20px;
-}
-
-.navigation-element {
-    width: 240px;
-    list-style: none;
+    position: relative;
     min-height: 56px;
 }
 
-.navigation-element a {
-  display: inline-block;
-  padding-top: 10px;
+.main-navigation ul {
+  margin: 0;
+  padding: 0;
+}
+
+.main-navigation a {
+  text-decoration: none;
+  font-size: 14px;
+  line-height: 26px;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  text-transform: uppercase;
+  font-family: PT Sans DIN Pro sans-serif;
+}
+
+.navigation-element {
+    min-width: 240px;
+    padding-top: 11px;
+    list-style: none;
 }
 
 .left-navigation {
@@ -63,95 +62,180 @@ body {
 
 .index-logo {
   position: absolute;
+  width: 138px;
+  height: 70px;
+  left: 50%;
   top: 0px;
-  left: 560px;
+  margin-left: -45px;
 }
 
 .promo-picture {
-  background-image: url(../img/mainphoto.jpg);
+  background: rgb(129, 179,210) url(../img/mainphoto.jpg);
   width: 1200px;
   height: 564px;
 }
 
 .promo-block {
   background-color: rgb(255,255,255);
-  width: 1200px;
-  min-height: 250px;
-  margin-top: 50px;
-}
-
-.promo {
-  width: 525px;
-  margin-bottom: 70px;
+  width: 540px;
+  margin-bottom: 50px;
+  margin-top: 60px;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
 }
 
-.reason-picture {
-   min-height: 256px;
-   margin-bottom: 75px;
+.promo-block h1 {
+  font-size: 21px;
+  line-height: 26px;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  text-transform: uppercase;
+  font-family: PT Sans DIN Pro sans-serif;
+}
+
+.promo-speech {
+  font-size: 14px;
+  line-height: 26px;
+  color: rgb(51, 51, 51);
+  text-transform: uppercase;
+  font-family: PT Sans DIN Pro sans-serif;
+}
+
+.picture-reason {
+   display: flex;
+   flex-direction: row;
 }
 
 .picture-description {
-  float: left;
+  flex-grow: 2;
+  padding-top: 40px;
+  display: inline-block;
+  vertical-align: middle;
   text-align: center;
-  width: 400px;
-  height: 256px;
+  padding-top: 40px;
   background-color: rgb(129, 179, 210);
+  font-size: 14px;
+  line-height: 21px;
+  color: rgb(255, 255, 255);
+  text-transform: uppercase;
+  font-family: PT Sans DIN Pro sans-serif;
 }
 
-.picture {
-  float: right;
-  height: 256px;
+.picture-header {
+  display: inline-block;
+  width: 140px;
+  font-size: 21px;
+  line-height: 21px;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  text-transform: uppercase;
+  font-family: PT Sans DIN Pro sans-serif;
+}
+
+.picture-text {
+  display: inline-block;
+  width: 300px;
+  font-size: 14px;
+  line-height: 21px;
+  color: rgb(255, 255, 255);
+  font-weight: normal;
+  text-transform: uppercase;
+  font-family: PT Sans DIN Pro sans-serif;
 }
 
 .reason-list {
-  text-align: center;
-  width: 1200px;
-  min-height: 253px;
-  margin-bottom: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 331px;
 }
 
 .reason-point {
-  float: left;
-  width: 300px;
-  height: 220px;
-  margin-left: 75px;
+  flex-basis: 290px;
+  text-align: center;
 }
 
-.reason-picture-reverse {
-   height: 256px;
-   margin-bottom: 0px;
+.reason-point h2 {
+  font-size: 21px;
+  line-height: 21px;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  text-transform: uppercase;
+  font-family: PT Sans DIN Pro sans-serif;
+}
+
+.picture-reason-reverse {
+   display: flex;
+   flex-direction: row-reverse;
 }
 
 .picture-description-reverse {
-  float: right;
+  flex-grow: 2;
+  padding-top: 40px;
+  display: inline-block;
+  vertical-align: middle;
   text-align: center;
-  width: 400px;
-  height: 256px;
+  padding-top: 40px;
   background-color: rgb(129, 179, 210);
+  font-size: 14px;
+  line-height: 21px;
+  color: rgb(255, 255, 255);
+  text-transform: uppercase;
+  font-family: PT Sans DIN Pro sans-serif;
 }
 
-.picture-reverse {
-  float: left;
-  height: 256px;
+.picture-header-reverse {
+  display: inline-block;
+  width: 181px;
+  font-size: 21px;
+  line-height: 21px;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  text-transform: uppercase;
+  font-family: PT Sans DIN Pro sans-serif;
+}
+
+.picture-text-reverse {
+  display: inline-block;
+  width: 340px;
+  font-size: 14px;
+  line-height: 21px;
+  color: rgb(255, 255, 255);
+  font-weight: normal;
+  text-transform: uppercase;
+  font-family: PT Sans DIN Pro sans-serif;
 }
 
 .reason-list-nopicture {
-  text-align: center;
-  width: 1200px;
-  height: 253px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 257px;
   background-color: rgb(238, 238, 238);
-  margin-bottom: 63px;
+  margin-bottom: 59px;
 }
 
 .reason-point-nopicture {
-  float: left;
-  width: 300px;
-  min-height: 180px;
-  margin-left: 70px;
+  flex-basis: 270px;
+  text-align: center;
 }
+
+.reason-point-nopicture h2 {
+  display: inline-block;
+  max-width: 130px;
+  text-align: center;
+  font-size: 21px;
+  line-height: 21px;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  text-transform: uppercase;
+  font-family: PT Sans DIN Pro sans-serif;
+}
+
+.reason-point-nopicture
 
 .if-interest-block {
   height: 290px;
