--- a/css/style.css
+++ b/css/style.css
@@ -215,7 +215,6 @@ body {
   align-items: center;
   min-height: 257px;
   background-color: rgb(238, 238, 238);
-  margin-bottom: 59px;
 }
 
 .reason-point-nopicture {
@@ -235,54 +234,78 @@ body {
   font-family: PT Sans DIN Pro sans-serif;
 }
 
-.reason-point-nopicture
-
 .if-interest-block {
-  height: 290px;
-  width: 1200px;
+  min-height: 292px;
   background-color: rgb(255, 255, 255);
 }
 
 .if-interest-content {
-   height: 102px;
+   padding-top: 60px;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
-   width: 442px;
+   width: 500px;
 }
 
-.map {
-  background-image: url(../img/map.jpg);
-  width: 1200px;
-  height: 593px;
+.if-interest-content span {
+  font-size: 30px;
+  line-height: 24px;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  text-transform: uppercase;
+  font-family: PT Sans, DIN Pro, sans-serif;
+}
+
+.if-interest-content p {
+  font-size: 14px;
+  line-height: 21px;
+  color: rgb(51, 51, 51);
+  font-weight: normal;
+  text-transform: uppercase;
+  font-family: PT Sans, DIN Pro, sans-serif;
 }
 
 .search-block {
+  position: relative;
+  min-height: 700px;
+  background-image: url(../img/map.jpg);
   text-align: center;
-  width: 1200px;
 }
 
-.search-form {
-  text-align: left;
-  margin: 0 auto;
-  height: 483px;
-  width: 576px;
+.search-basis {
+  position: absolute;
+  min-width: 600px;
+  bottom: 330px;
+  left: 300px;
   background-color: rgb(255, 255, 255);
 }
 
 .search-name {
-  background-color: rgb(118, 99, 87);
   display: block;
-  width: 576px;
-  height: 87px;
-  margin: 0 auto;
+  padding-top: 20px;
+  min-height: 50px;
+  background-color: rgb(118, 99, 87);
   text-align: center;
+  font-size: 21px;
+  line-height: 26px;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  text-transform: uppercase;
+  font-family: "PT Sans" "DIN Pro" sans-serif;
+}
+
+.search-form {
+  text-align: left;
+}
+
+.search-row {
+  padding: 10px;
 }
 
 .search-form-small {
   text-align: left;
   margin: 0 auto;
-  height: 218px;
+  height: 280px;
   background-image: url("../img/background.png");
 }
 
