--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
   color: rgb(51, 51, 51);
   font-weight: normal;
   text-transform: uppercase;
-  font-family: PT Sans, DIN Pro, sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   background-color: white;
 }
 
@@ -41,7 +41,7 @@ body {
   color: rgb(0, 0, 0);
   font-weight: bold;
   text-transform: uppercase;
-  font-family: PT Sans DIN Pro sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
 }
 
 .navigation-element {
@@ -91,7 +91,7 @@ body {
   color: rgb(0, 0, 0);
   font-weight: bold;
   text-transform: uppercase;
-  font-family: PT Sans DIN Pro sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
 }
 
 .promo-speech {
@@ -99,7 +99,7 @@ body {
   line-height: 26px;
   color: rgb(51, 51, 51);
   text-transform: uppercase;
-  font-family: PT Sans DIN Pro sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
 }
 
 .picture-reason {
@@ -119,7 +119,7 @@ body {
   line-height: 21px;
   color: rgb(255, 255, 255);
   text-transform: uppercase;
-  font-family: PT Sans DIN Pro sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
 }
 
 .picture-header {
@@ -130,7 +130,7 @@ body {
   color: rgb(255, 255, 255);
   font-weight: bold;
   text-transform: uppercase;
-  font-family: PT Sans DIN Pro sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
 }
 
 .picture-text {
@@ -141,7 +141,7 @@ body {
   color: rgb(255, 255, 255);
   font-weight: normal;
   text-transform: uppercase;
-  font-family: PT Sans DIN Pro sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
 }
 
 .reason-list {
@@ -163,7 +163,7 @@ body {
   color: rgb(0, 0, 0);
   font-weight: bold;
   text-transform: uppercase;
-  font-family: PT Sans DIN Pro sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
 }
 
 .picture-reason-reverse {
@@ -183,18 +183,18 @@ body {
   line-height: 21px;
   color: rgb(255, 255, 255);
   text-transform: uppercase;
-  font-family: PT Sans DIN Pro sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
 }
 
 .picture-header-reverse {
   display: inline-block;
-  width: 181px;
+  width: 151px;
   font-size: 21px;
   line-height: 21px;
   color: rgb(255, 255, 255);
   font-weight: bold;
   text-transform: uppercase;
-  font-family: PT Sans DIN Pro sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
 }
 
 .picture-text-reverse {
@@ -205,7 +205,7 @@ body {
   color: rgb(255, 255, 255);
   font-weight: normal;
   text-transform: uppercase;
-  font-family: PT Sans DIN Pro sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
 }
 
 .reason-list-nopicture {
@@ -231,7 +231,7 @@ body {
   color: rgb(0, 0, 0);
   font-weight: bold;
   text-transform: uppercase;
-  font-family: PT Sans DIN Pro sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
 }
 
 .if-interest-block {
@@ -253,7 +253,7 @@ body {
   color: rgb(0, 0, 0);
   font-weight: bold;
   text-transform: uppercase;
-  font-family: PT Sans, DIN Pro, sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
 }
 
 .if-interest-content p {
@@ -262,25 +262,29 @@ body {
   color: rgb(51, 51, 51);
   font-weight: normal;
   text-transform: uppercase;
-  font-family: PT Sans, DIN Pro, sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
 }
 
 .search-block {
   background-image: url(../img/map.jpg);
-  text-align: center;
+  min-height: 471px;
+  position: relative;
 }
 
 .search-basis {
-  width: 600px;
+  width: 568px;
   background-color: rgb(255, 255, 255);
+  position: absolute;
+  left: 315px;
+  top: -90px;
 }
 
 .search-name {
   display: block;
   padding: 0;
   margin: 0;
-  padding-top: 25px;
-  min-height: 50px;
+  min-height: 56px;
+  vertical-align: middle;
   background-color: rgb(118, 99, 87);
   text-align: center;
   font-size: 21px;
@@ -288,21 +292,120 @@ body {
   color: rgb(255, 255, 255);
   font-weight: bold;
   text-transform: uppercase;
-  font-family: PT Sans DIN Pro sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
+}
+
+.search-basis h3 {
+  padding-top: 30px;
 }
 
 .search-form {
   text-align: left;
+  padding-top: 56px;
+  padding-left: 56px;
+  padding-bottom: 56px;
 }
 
-.search-row {
-  padding: 10px;
+.search-first-row {
+  padding-bottom: 30px;
+}
+
+.search-second-row {
+  padding-bottom: 30px;
+}
+
+.search-third-row {
+  display: inline-block;
+  padding-bottom: 54px;
+}
+
+.search-fourth-row {
+  display: inline-block;
 }
 
 .search-first-row input {
-	width: 300px;
-	border: 1px solid #cecece;
-	background: grey;
+	width: 345px;
+  height: 38px;
+	background: rgb(242, 242, 242);
+  box-shadow: none;
+  border: none;
+}
+
+.search-second-row input {
+	width: 345px;
+  height: 38px;
+	background: rgb(242, 242, 242);
+  box-shadow: none;
+  border: none;
+}
+
+.search-third-row input {
+	width: 113px;
+  height: 38px;
+	background: rgb(242, 242, 242);
+  box-shadow: none;
+  border: none;
+}
+
+.search-fourth-row input {
+	width: 113px;
+  height: 38px;
+	background: rgb(242, 242, 242);
+  box-shadow: none;
+  border: none;
+}
+
+.search-first-row label {
+  padding-right: 20px;
+  position: relative;
+}
+
+.search-first-row label::before {
+  content: "";
+  width: 21px;
+  height: 21px;
+  background: rgb(242, 242, 242) url(../img/calendar.png) no-repeat;
+  position: absolute;
+  right: -340px;
+  top: 1px;
+}
+
+.search-second-row label {
+  padding-right: 17px;
+  position: relative;
+}
+
+.search-second-row label::before {
+  content: "";
+  width: 21px;
+  height: 21px;
+  background: rgb(242, 242, 242) url(../img/calendar.png) no-repeat;
+  position: absolute;
+  right: -340px;
+  top: 1px;
+}
+
+.search-third-row label {
+  padding-right: 38px;
+}
+
+.search-fourth-row label {
+  padding-left: 51px;
+  padding-right: 20px;
+}
+
+.search-form-button input {
+  width: 458px;
+  height: 58px;
+  background-color: rgb(129, 179, 210);
+  box-shadow: none;
+  border: none;
+  font-size: 21px;
+  line-height: 26px;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  text-transform: uppercase;
+  font-family: "PT Sans", "Arial", sans-serif;
 }
 
 .search-form-small {
@@ -439,7 +542,7 @@ body {
   color: rgb(0, 0, 0);
   font-weight: bold;
   text-transform: uppercase;
-  font-family: PT Sans DIN Pro sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
 }
 
 .footer-social {
@@ -461,7 +564,7 @@ body {
   line-height: 26px;
   color: rgb(0, 0, 0);
   text-transform: uppercase;
-  font-family: PT Sans DIN Pro sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
 }
 
 .footer-copyright .copyright-img {
@@ -470,8 +573,8 @@ body {
 
 .social-btn {
   display: inline-block;
-  width: 43px;
-  height: 43px;
+  width: 46px;
+  height: 48px;
   font-size: 0;
   text-decoration: none;
   vertical-align: top;
@@ -481,15 +584,15 @@ body {
 }
 
 .social-btn-facebook {
-    background-position: 7px 2px;
+    background-position: 9px 4px;
 }
 
 .social-btn-twitter {
-    background-position: 3px -35px;
+    background-position: 5px -33px;
 }
 
 .social-btn-youtube {
-    background-position: 2px -71px;
+    background-position: 3px -68px;
 }
 
 h2 {
