--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,18 @@ body {
   font-family: "PT Sans", "Arial", sans-serif;
 }
 
+.main-navigation a:focus {
+  color: rgb(242, 242, 242);
+}
+
+.main-navigation a:hover {
+  color: rgb(129, 179, 210);
+}
+
+.active a {
+  color: rgb(118, 99, 87);
+}
+
 .navigation-element {
     min-width: 240px;
     padding-top: 11px;
@@ -343,13 +355,6 @@ body {
 	background: rgb(242, 242, 242);
   box-shadow: none;
   border: none;
-  -webkit-appearance: textfield;
-  -moz-appearance: textfield;
-}
-
-.search-first-row input:hover {
-  -webkit-appearance: textfield;
-  -moz-appearance: textfield;
 }
 
 .search-second-row input {
@@ -362,47 +367,30 @@ body {
 	background: rgb(242, 242, 242);
   box-shadow: none;
   border: none;
-  -webkit-appearance: textfield;
-  -moz-appearance: textfield;
-}
-
-.search-second-row input:hover {
-  -webkit-appearance: textfield;
-  -moz-appearance: textfield;
 }
 
 .search-third-row input {
   padding: 0;
   margin: 0;
-	width: 114px;
+  padding-left: 50px;
+  padding-right: 40px;
+	width: 24px;
   height: 38px;
 	background: rgb(242, 242, 242);
   box-shadow: none;
   border: none;
-  -webkit-appearance: textfield;
-  -moz-appearance: textfield;
-}
-
-.search-third-row input:hover {
-  -webkit-appearance: textfield;
-  -moz-appearance: textfield;
 }
 
 .search-fourth-row input {
   padding: 0;
   margin: 0;
-	width: 114px;
+  padding-left: 50px;
+  padding-right: 40px;
+	width: 24px;
   height: 38px;
 	background: rgb(242, 242, 242);
   box-shadow: none;
   border: none;
-  -webkit-appearance: textfield;
-  -moz-appearance: textfield;
-}
-
-.search-fourth-row input:hover {
-  -webkit-appearance: textfield;
-  -moz-appearance: textfield;
 }
 
 .search-first-row label {
@@ -414,6 +402,17 @@ body {
   font-weight: bold;
   text-transform: uppercase;
   font-family: "PT Sans", "Arial", sans-serif;
+}
+
+.search-first-row label::before {
+  content: "";
+  width: 21px;
+  height: 21px;
+  background: rgb(242, 242, 242) url(../img/calendar.png) no-repeat;
+  position: absolute;
+  right: -340px;
+  top: 0.5px;
+  cursor: pointer;
 }
 
 .search-second-row label {
@@ -434,8 +433,9 @@ body {
   height: 21px;
   background: rgb(242, 242, 242) url(../img/calendar.png) no-repeat;
   position: absolute;
-  right: -355px;
-  top: 1px;
+  right: -340px;
+  top: 0.5px;
+  cursor: pointer;
 }
 
 .search-third-row label {
@@ -449,6 +449,28 @@ body {
   font-family: "PT Sans", "Arial", sans-serif;
 }
 
+.search-third-row label::before {
+  content: "";
+  width: 21px;
+  height: 21px;
+  background: rgb(242, 242, 242) url(../img/minus.png) center no-repeat;
+  position: absolute;
+  right: -35px;
+  top: 0.5px;
+  cursor: pointer;
+}
+
+.search-third-row label::after {
+  content: "";
+  width: 21px;
+  height: 21px;
+  background: rgb(242, 242, 242) url(../img/plus.png) center no-repeat;
+  position: absolute;
+  right: -110px;
+  top: 0.5px;
+  cursor: pointer;
+}
+
 .search-fourth-row label {
   padding-right: 20px;
   padding-left: 48px;
@@ -460,6 +482,28 @@ body {
   font-weight: bold;
   text-transform: uppercase;
   font-family: "PT Sans", "Arial", sans-serif;
+}
+
+.search-fourth-row label::before {
+  content: "";
+  width: 21px;
+  height: 21px;
+  background: rgb(242, 242, 242) url(../img/minus.png) center no-repeat;
+  position: absolute;
+  right: -35px;
+  top: 0.5px;
+  cursor: pointer;
+}
+
+.search-fourth-row label::after {
+  content: "";
+  width: 21px;
+  height: 21px;
+  background: rgb(242, 242, 242) url(../img/plus.png) center no-repeat;
+  position: absolute;
+  right: -110px;
+  top: 0.5px;
+  cursor: pointer;
 }
 
 .search-form-button input {
@@ -813,15 +857,26 @@ body {
 }
 
 .hotel-name {
+  display: block;
   margin: 0;
   padding: 0;
-  padding-bottom: 10px;
+  padding-bottom: 9px;
+  text-decoration: none;
   font-size: 21px;
   line-height: 26px;
   color: rgb(0, 0, 0);
   font-weight: bold;
   text-transform: uppercase;
   font-family: "PT Sans", "Arial", sans-serif;
+  cursor: pointer;
+}
+
+.hotel-name:focus {
+  color: rgb(242, 242, 242);
+}
+
+.hotel-name:hover {
+  color: rgb(129, 179, 210);
 }
 
 .article-text {
@@ -845,16 +900,26 @@ body {
   margin-right: 5px;
   width: 120px;
   height: 25px;
-  background-color: rgb(129, 179, 210);
+  background-color: rgba(129, 179, 210, 0.8);
   text-align: center;
   vertical-align: middle;
   padding-top: 4px;
   font-size: 14px;
   line-height: 21px;
-  color: rgb(255, 255, 255);
+  color: rgba(255, 255, 255, 0.8);
   font-weight: bold;
   text-transform: uppercase;
   font-family: "PT Sans", "Arial", sans-serif;
+}
+
+.more-btn:hover {
+  color: rgba(255, 255, 255);
+  background-color: rgb(129, 179, 210);
+}
+
+.more-btn:focus {
+  color: rgba(255, 255, 255, 0.7);
+  background-color: rgb(129, 179, 210);
 }
 
 .book-btn {
@@ -862,16 +927,26 @@ body {
   display: inline-block;
   width: 150px;
   height: 25px;
-  background-color: rgb(118, 99, 87);
+  background-color: rgba(118, 99, 87, 0.8);
   text-align: center;
   vertical-align: middle;
   padding-top: 4px;
   font-size: 14px;
   line-height: 21px;
-  color: rgb(255, 255, 255);
+  color: rgba(255, 255, 255, 0.8);
   font-weight: bold;
   text-transform: uppercase;
   font-family: "PT Sans", "Arial", sans-serif;
+}
+
+.book-btn:hover {
+  color: rgb(255, 255, 255);
+  background-color: rgb(118, 99, 87);
+}
+
+.book-btn:focus {
+  color: rgba(255, 255, 255, 0.7);
+  background-color: rgb(118, 99, 87);
 }
 
 .right-article-type {
